--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.11.8",
     "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
