--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fastify": "^3.6.0",
+    "fastify-autoload": "^3.3.0",
     "node-json-db": "^1.1.0"
   }
 }
