--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "fastify": "^3.6.0",
     "fastify-autoload": "^3.3.0",
+    "fastify-cors": "^4.1.0",
     "fastify-swagger": "^3.4.0",
     "node-json-db": "^1.1.0"
   }
