--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fastify-autoload": "^3.3.0",
     "fastify-cors": "^4.1.0",
     "fastify-swagger": "^3.4.0",
-    "sequelize": "^6.3.5",
-    "sqlite3": "^5.0.0"
+    "sqlite3": "^5.0.0",
+    "typeorm": "^0.2.28"
   }
 }
