--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^14.14.6",
+    "@types/bluebird": "^3.5.33",
+    "@types/node": "^14.14.7",
+    "@types/validator": "^13.1.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
@@ -17,6 +19,9 @@
     "fastify-autoload": "^3.3.0",
     "fastify-cors": "^4.1.0",
     "fastify-swagger": "^3.4.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.3.5",
+    "sequelize-typescript": "^2.0.0-beta.0",
+    "sqlite3": "^5.0.0"
   }
 }
