--- a/package.json
+++ b/package.json
@@ -9,19 +9,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bluebird": "^3.5.33",
-    "@types/node": "^14.14.7",
-    "@types/validator": "^13.1.0",
-    "typescript": "^4.0.5"
+    "@types/bluebird": "^3.5.36",
+    "@types/node": "^16.10.3",
+    "@types/validator": "^13.6.3",
+    "typescript": "^4.4.3"
   },
   "dependencies": {
-    "fastify": "^3.7.0",
-    "fastify-autoload": "^3.3.0",
-    "fastify-cors": "^4.1.0",
-    "fastify-swagger": "^3.4.0",
+    "fastify": "^3.22.0",
+    "fastify-autoload": "^3.9.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-swagger": "^4.12.4",
     "reflect-metadata": "^0.1.13",
-    "sequelize": "^6.3.5",
-    "sequelize-typescript": "^2.0.0-beta.0",
-    "sqlite3": "^5.0.0"
+    "sequelize": "^6.7.0",
+    "sequelize-typescript": "^2.1.1",
+    "sqlite3": "^5.0.2"
   }
 }
